Correção no Java

--- a/entrada de dados/index.html
+++ b/entrada de dados/index.html
@@ -17,9 +17,9 @@
     Subtração:
     <p id="sub"></p>
     Multiplicação:
-    <p id="multiplicação"></p>
+    <p id="multiplicacao"></p>
     Divisão:
-    <p id="divisão"></p>
+    <p id="divisao"></p>
 
     <script src="calculadora.js"></script>
 </body>
